[tool.poetry]
name = "hermes"
version = "0.1.0"
description = ""
authors = ["raisultan <ki.xbozz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdfium2 = "4.25.0"
openai = "1.4.0"
pymilvus = "2.3.0"
tiktoken = "0.5.2"
fastapi = "0.105.0"
pydantic = "1.10.13"
uvicorn = "0.24.0.post1"
rocketry = "2.5.1"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
